package L1_UML.L1E3.src;
public class NonfictionBook extends Book {

  public NonfictionBook(String name) {
    super(name, false);
  }
}