package L1_UML.L1E3.src;
public interface Readable {
    void checkout();
    void returnBook();
}